file structure change

--- a/app/TrueQuiz.html
+++ b/app/TrueQuiz.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <title>TrueQuiz</title>
-    <link rel="stylesheet" href="./CSS/Main.css">
+    <link rel="stylesheet" href="/app/CSS/Main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
     <script src="https://cdn.socket.io/socket.io-3.0.0.js"></script>
-    <script defer src="./JS/Main.js"></script>
+    <script defer src="/app/JS/Main.js"></script>
 </head>
 
 <body>
@@ -76,6 +76,6 @@
         </select>
     </div>
 </body>
-<script src="./JS/Main.js"></script>
+<script src="/app/JS/Main.js"></script>
 
 </html>
