--- a/app/TrueQuiz.html
+++ b/app/TrueQuiz.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="/app/CSS/Main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
     <script src="https://cdn.socket.io/socket.io-3.0.0.js"></script>
-    <script defer src="/app/JS/Main.js"></script>
 </head>
 
 <body>
@@ -34,7 +33,7 @@
             <button id="changeName">Join</button>
         </div>
     </div>
-    <div id="countdown"></div>
+    <p id="countdown"></p>
     <div id="question"></div>
 
     <div class="quiz-options-container">
