--- a/app/TrueQuiz.html
+++ b/app/TrueQuiz.html
@@ -20,7 +20,7 @@
             <button id="startGame">Start game</button> <br>
 
             <div class="box">
-                <label class="lobbyCode">Lobby code: (num)</label>
+                <label class="lobbyCode">Lobby code:</label>
             </div>
 
             <!-- list of users, in the lobby -->
