--- a/app/TrueQuiz.html
+++ b/app/TrueQuiz.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>TrueQuiz</title>
-    <link rel="stylesheet" href="/app/CSS/Main.css">
+    <link rel="stylesheet" href="./CSS/Main.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
     <script src="https://cdn.socket.io/socket.io-3.0.0.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -75,6 +77,6 @@
         </select>
     </div>
 </body>
-<script src="/app/JS/Main.js"></script>
+<script src="./JS/Main.js"></script>
 
 </html>
